[package]
name = "schedule-task"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["dynamodb"] }
aws-sdk-eventbridge =  "1.43.0"
aws-sdk-scheduler = "1.41.0"
nanoid = "0.4.0"
chrono = "0.4.38"
serde_dynamo = "4.2.14"
lambda_runtime = "0.13.0"
aws-config = "1.5.5"
tokio = { version = "1", features = ["macros"] }
tracing-subscriber = "0.3.18"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
shared = { path = "../shared" }

